<resources>
    <string name="app_name">Mosis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Register">Register</string>
    <string name="register">Register\n</string>
    <string name="New_here">New here\n</string>
    <string name="Old_here">Old here\n</string>
    <string name="username">username</string>
    <string name="phone">phone</string>
    <string name="Add">Add</string>
    <string name="opis">opis</string>
    <string name="Back">Back</string>
    <string name="ozbiljno">hitno</string>
    <string name="neutralno">neutralno</string>
    <string name="laz">laz</string>
    <string name="razdaljina">razdaljina</string>
    <string name="autor">autor</string>
    <string name="Filter">Filter</string>
    <string name="txtfilt">Filtriraj po:</string>
    <string name="Idem">Idem</string>
    <string name="naziv">naziv\n</string>
    <string name="nazivv">naziv</string>
</resources>