<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filter"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="@string/txtfilt"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id = "@+id/filterautor"
        android:hint = "@string/nazivv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id = "@+id/filterazdaljina"
        android:hint = "@string/razdaljina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:layout_marginBottom="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_filter"
        android:hint="@string/Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>