<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddObject"
    android:orientation="vertical"
    android:gravity="center"
    >


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/object_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:src="@drawable/baseline_add_photo_alternate_24"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id = "@+id/opis"
            android:hint = "@string/opis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_ObjectEnd"
        android:hint="@string/Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_ObjectBack"
        android:hint="@string/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>